Update about-github-advanced-security.md